2023/style.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: "lato", sans-serif;
    color: var(--adaptive-text-color)
}

:root {
    --light-background-color: transparent;
    --light-header-1-color: #212529;
    --light-header-2-color: #343a40;
    --light-text-color: #495057;

    --dark-background-color: #212529;
    --dark-header-1-color: #f8f9fa;
    --dark-header-2-color: #f1f3f5;
    --dark-text-color: #e9ecef;


    --adaptive-background-color: var(--light-background-color);
    --adaptive-header-1-color: var(--light-header-1-color);
    --adaptive-header-2-color: var(--light-header-2-color);
    --adaptive-text-color: var(--light-text-color);
}

@media(prefers-color-scheme: dark) {
   :root {
       --adaptive-background-color: var(--dark-background-color);
       --adaptive-header-1-color: var(--dark-header-1-color);
       --adaptive-header-2-color: var(--dark-header-2-color);
       --adaptive-text-color: var(--dark-text-color);
   }

    /* This was the only way I could get my fill color to change without
    embedding the svg. Using `fill=currentColor` and setting color did not work. */
    .add-invert-filter-if-dark {
        filter: invert(100%);
    }
}


html {
    font-size: 16px;
    background-color: var(--adaptive-background-color);
}

@media (min-width: 500px) { html { font-size: 17px; } }
@media (min-width: 630px) { html { font-size: 18px; } }
@media (min-width: 1600px) { html { font-size: calc(18px + ((100vw - 1600px) / 84)); } }


h1 {
    color: var(--adaptive-header-1-color);
    padding-bottom: 0.25em;
}


h2 {
    color: var(--adaptive-header-2-color);
}

p {
    padding-bottom: 0.8em;
}

address {
    font-style: normal;
}

footer {
    text-align: center;
    font-size: 0.8em;
    padding-bottom: 1rem;

    /* Together with min-height of 100vh of the flex-container parent
    this ensures that the footer is always placed at the bottom.
    */
    margin-top: auto;

}

/* Scale padding from 10vw (at 500px) to 25vw (at 1200px), based on eye-balling. */
.centered-column {
  margin: 0 clamp(10vw, calc(300px - (1200px - 100vw) / 2.8), 25vw);
}

.content-header > *, .contact-container > *  {
    text-align: center;
}

.content-header {
    margin-top: 2em;
}

.contact-container {
    border: 0.15em solid var(--adaptive-header-2-color);
    padding: 1em 2em;
    border-radius: 40px;

    display: flex;
    flex-direction: column;
    gap: 0.6rem;
}


.about-tile {
    grid-column: 1 / -1;
}

.collapsing-grid {
    display: grid;

    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto;
    column-gap: 0.6em;
    row-gap: 0.6em;
}

@media(max-width: 500px) {
    .collapsing-grid {
        grid-template-columns: 1fr;
    }
}


.contact-row {
    height: 2em;

    display: flex;
    justify-content: center;
}

.contact-item {
    height: 100%;
}

.contact-logo {
    width: 80%;
    height: 80%;
}

.tile {
    width: 100%;
    height: 25vh;
    object-fit: cover;
    border-radius: 40px;
}

.box {
    position: relative;
}

a:hover > .overlay {
    background: rgba(0, 0, 0, 0.85);
}

.overlay {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: max(40px, 20%);

    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 1));

    border-bottom-left-radius: 40px;
    border-bottom-right-radius: 40px;
}

.tile-text {
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: max(1.8em, 20%);

    display: flex;
    align-items: center;
    justify-content: center;

    color: #fff;
    font-size: 1.2em;
}

.upper-case {
    text-transform: uppercase;
}

.home-button {
    background-color: var(--light-header-1-color);
    color: var(--dark-header-1-color);

    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
    padding: 0.6em;

    text-transform: uppercase;
    text-decoration: none;
}

@media (prefers-color-scheme: dark) {
    .home-button {
        background-color: var(--dark-header-1-color);
        color: var(--light-header-1-color);
    }
}

.home-button:hover {
    padding-top: 1em;
    transition-duration: 0.5s;
}

.start-aligned {
    display: flex;
    align-items: start;
    height: 3em;
}

.vertical-flex {
    display: flex;
    flex-direction: column;

    justify-content: start;
    align-items: stretch;

    gap: 1.1em;
    min-height: 100vh;
}

.portrait-picture {
    width: min(30vw, 200px);
    border-radius: 20px;
    float: right;
    margin-left: 1.1em;
}

.no-padding-bottom {
    padding-bottom: 0;
}

